Add a test for predicates.